strategy section columns spacing fixed

--- a/public/responsive/wide.css
+++ b/public/responsive/wide.css
@@ -35,8 +35,9 @@ section.main article.introduction {
 
 /* Home     */
 nav.cloud {
-  position:absolute;
-  right:0px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
   letter-spacing: 1px;
 }
 
@@ -145,9 +146,7 @@ footer {
 
 /* home */
 .home .strategy .tile {
-  margin-top: 2.5%;
-  margin-bottom:1.5%;
-  margin-right:1%;
+  margin: 2.5% 0.8% 1.5% 1.5%;
   width: 30.5%; /* 3 tiles in grid */
 }
 
